--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "lint-staged": "^13.2.2",
+    "postcss": "^8.4.24",
+    "postcss-nested": "^6.0.1",
     "prettier": "^2.8.8",
     "simple-git-hooks": "^2.8.1",
     "stylelint": "^15.6.2",
     "stylelint-config-idiomatic-order": "^9.0.0",
     "stylelint-config-standard": "^33.0.0",
+    "stylelint-order": "^6.0.3",
     "stylelint-prettier": "^3.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
@@ -84,7 +87,13 @@
       "stylelint-config-idiomatic-order",
       "stylelint-config-standard",
       "stylelint-prettier/recommended"
-    ]
+    ],
+    "plugins": [
+      "stylelint-order"
+    ],
+    "rules": {
+      "selector-class-pattern": null
+    }
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
