--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
+    "@types/node": "^20.4.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -49,7 +50,8 @@
   "eslintConfig": {
     "env": {
       "browser": true,
-      "es2020": true
+      "es2020": true,
+      "node": true
     },
     "extends": [
       "eslint:recommended",
