--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.2",
     "@radix-ui/react-select": "^1.2.1",
+    "@tanstack/react-query": "^4.33.0",
     "classnames": "^2.3.2",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
