--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@tanstack/react-query": "^4.33.0",
     "classnames": "^2.3.2",
     "mobx": "^6.9.0",
-    "mobx-react": "^7.6.0",
+    "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
